# sphinxtest

./: .buildinfo  beans.html  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: sphinx-build.yml
docs/source/: beans.rst  conf.py  index.rst
sphinxtest/: beans.py
