[tool.poetry]
name = "sphinxtest"
version = "0.1.0"
description = ""
authors = ["mrlegohead0x45 <96256923+mrlegohead0x45@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
Sphinx = "^4.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
